Fixed spacing and widths
Fixed the select width to match inputs.
Fixed padding between Contact info and Newsletter areas of the form.

Changed the background color of the footer to match that of the header.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,6 +11,20 @@ fieldset {
 	border: 0;
 }
 
+legend {
+    padding-top: 20px;
+    line-height: 2;
+    font-size: 1.5em;
+}
+
+input:focus {
+    background-color: #23d6c4;
+}
+
+.form-contact-info input,
+.form-contact-info select {
+    padding-left: 20px;
+}
 
 /*
 HEADER STYLES
@@ -31,7 +45,7 @@ HEADER STYLES
 	padding-bottom: 20px;
 	text-align: center;
 	font-weight: 200;
-	font-size: 1.75em;
+	font-size: 24px;
 }
 
 .welcome {
@@ -65,12 +79,7 @@ CONTACT INFO
 
 .form-contact-info {
 	padding-right: 10px;
-	padding-bottom: 20px;
-}
-
-.form-contact-info legend {
-	font-size: 1.5em;
-	padding-top: 25px;
+	padding-bottom: 40px;
 }
 
 .form-contact-info label {
@@ -78,23 +87,37 @@ CONTACT INFO
 	color: #272759;
 }
 
-.form-contact-info input, select {
+.form-contact-info input, 
+select {
 	height: 50px;
 	max-width: 600px;
 	width: 100%;
 	background-color: #e3e3e3;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	margin-right: auto;
+	margin-right: 0;
 	border: 0;
 	border-radius: 3px;
+}
+
+#form-name::-webkit-input-placeholder,
+#form-email::-webkit-input-placeholder {
+    text-align: right;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.form-contact-info input:hover, 
+select:hover {
+    background-color: #23d6c4;
 }
 
 input[name="form-zip"] {
 	max-width: 150px;
 }
 
-select:focus, textarea:focus, input:focus {
+select:focus, textarea:focus, 
+input:focus {
 	border: 2px solid #272759;
 }
 
@@ -105,18 +128,14 @@ NEWSLETTER
 
 .form-newsletter-border {
 	border-top: 2px solid #303741;
-	padding-bottom: 40px;
+	padding-bottom: 10px;
 	max-width: 600px;
-	width: 95%;
+	width: 100%;
 	margin: 0 auto;
 }
 
 .small-margin {
 	margin-top: 0;
-}
-
-.form-newsletter legend {
-	font-size: 1.25em;
 }
 
 .form-newsletter label {
@@ -158,12 +177,23 @@ input[type="button"] {
 	max-width: 600px;
 }
 
+
+/*
+footer*/
+
+footer {
+	background-color: #303741;
+	color: white;
+}
+
 footer p {
 	text-align: center;
 	font-style: italic;
-	font-size: .875em;
+	font-size: 12px;
 	color: #b2b2b2;
-	margin-bottom: 200px;
+    margin-bottom: 0;
+    padding-top: 26px;
+	padding-bottom: 26px;
 }
 
 
@@ -179,18 +209,24 @@ form {
 	margin: 0 auto;
 }
 
+input, select{
+  width:100%;
+  box-sizing:border-box;
+}
 
 /*
 MEDIA Qs
 */
 
 @media (min-width: 768px) {
-	.form-contact-info input, .form-contact-info select {
+	.form-contact-info input, 
+    .form-contact-info select {
 		position: relative;
 		left: 8em;
 		margin: 0 auto;
 	}
-	.form-contact-info input, select {
+	.form-contact-info input, 
+    select {
 		height: 50px;
 		background-color: #e3e3e3;
 		margin-right: 0px;
